--- a/package.json
+++ b/package.json
@@ -14,6 +14,10 @@
     "@mantine/next": "^4.2.12",
     "@prisma/client": "^4.0.0",
     "@tabler/icons": "^1.78.1",
+    "@trpc/client": "^9.26.2",
+    "@trpc/next": "^9.26.2",
+    "@trpc/react": "^9.26.2",
+    "@trpc/server": "^9.26.2",
     "axios": "^0.27.2",
     "framer-motion": "^6.5.1",
     "next": "12.2.2",
@@ -23,7 +27,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-query": "^3.39.2",
-    "sass": "^1.53.0"
+    "sass": "^1.53.0",
+    "zod": "^3.17.10"
   },
   "devDependencies": {
     "@types/node": "18.0.5",
