--- a/package.json
+++ b/package.json
@@ -9,37 +9,40 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@mantine/core": "^4.2.12",
-    "@mantine/hooks": "^4.2.12",
-    "@mantine/next": "^4.2.12",
-    "@prisma/client": "^4.0.0",
-    "@tabler/icons": "^1.78.1",
-    "@trpc/client": "^9.26.2",
+    "@emotion/react": "^11.10.4",
+    "@emotion/server": "^11.10.0",
+    "@mantine/core": "^5.2.4",
+    "@mantine/hooks": "^5.2.4",
+    "@mantine/next": "^5.2.4",
+    "@prisma/client": "^4.3.1",
+    "@tabler/icons": "^1.92.0",
     "axios": "^0.27.2",
-    "framer-motion": "^6.5.1",
-    "next": "12.2.2",
+    "framer-motion": "^7.2.1",
+    "next": "^12.2.5",
     "next-compose-plugins": "^2.2.1",
-    "next-connect": "^1.0.0-next.1",
+    "next-connect": "^0.13.0",
     "next-svgr": "^0.0.2",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-query": "^3.39.2",
-    "sass": "^1.53.0",
-    "zod": "^3.17.10"
+    "sass": "^1.54.8",
+    "stylis-plugin-rtl": "^2.1.1",
+    "zod": "^3.18.0"
   },
   "devDependencies": {
-    "@types/node": "18.0.5",
-    "@types/react": "18.0.15",
-    "@types/react-dom": "18.0.6",
-    "@typescript-eslint/eslint-plugin": "^5.30.5",
-    "eslint": "8.19.0",
-    "eslint-config-next": "12.2.2",
+    "@types/node": "^18.7.14",
+    "@types/react": "^18.0.18",
+    "@types/react-dom": "^18.0.6",
+    "@typescript-eslint/eslint-plugin": "^5.36.1",
+    "eslint": "^8.23.0",
+    "eslint-config-next": "^12.2.5",
     "eslint-config-prettier": "^8.5.0",
-    "husky": "^8.0.0",
-    "jest": "^28.1.3",
+    "husky": "^8.0.1",
+    "jest": "^29.0.1",
     "lint-staged": "^13.0.3",
     "prettier": "^2.7.1",
-    "prisma": "^4.0.0",
-    "typescript": "4.7.4"
+    "prisma": "^4.3.1",
+    "typescript": "^4.8.2",
+    "yarn-upgrade-all": "^0.7.1"
   }
 }
