--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
   "dependencies": {
     "@emotion/react": "^11.10.4",
     "@emotion/server": "^11.10.0",
+    "@hookform/resolvers": "^2.9.7",
     "@mantine/core": "^5.2.4",
     "@mantine/hooks": "^5.2.4",
     "@mantine/next": "^5.2.4",
     "@prisma/client": "^4.3.1",
     "@tabler/icons": "^1.92.0",
     "axios": "^0.27.2",
+    "cookies-next": "^2.1.1",
     "framer-motion": "^7.2.1",
     "next": "^12.2.5",
     "next-compose-plugins": "^2.2.1",
@@ -24,6 +26,7 @@
     "next-svgr": "^0.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.34.2",
     "react-query": "^3.39.2",
     "sass": "^1.54.8",
     "stylis-plugin-rtl": "^2.1.1",
