--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p 3001",
     "build": "next build",
     "start": "node server.js",
     "lint": "next lint"
@@ -18,8 +18,10 @@
     "@prisma/client": "^4.3.1",
     "@tabler/icons": "^1.92.0",
     "axios": "^0.27.2",
+    "bcrypt": "^5.0.1",
     "cookies-next": "^2.1.1",
     "framer-motion": "^7.2.1",
+    "jsonwebtoken": "^8.5.1",
     "next": "^12.2.5",
     "next-compose-plugins": "^2.2.1",
     "next-connect": "^0.13.0",
@@ -33,6 +35,8 @@
     "zod": "^3.18.0"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
+    "@types/jsonwebtoken": "^8.5.9",
     "@types/node": "^18.7.14",
     "@types/react": "^18.0.18",
     "@types/react-dom": "^18.0.6",
