--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "react-query": "^3.39.2",
     "sass": "^1.54.8",
     "stylis-plugin-rtl": "^2.1.1",
-    "zod": "^3.18.0"
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
